welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^MethodsPicture:25: error: type Red is not a member of object java.awt.Color
faireV(c:Color.Red);
               ^MethodsPicture:25: error: not found: value c
faireV(c:Color.Red);
       ^